# spectre-network

./: .containerignore  .gitignore  ANALYSIS.md  CAPABILITIES.md  COMPLETE_CHANGES_SUMMARY.md  Cargo.toml  Containerfile  Containerfile.audit  FINAL_SUMMARY.md  GEMINI.md  IMPLEMENTATION.md  LANGUAGE_SUMMARY.md  PROXY_SOURCES_UPDATE.md  ProxyPolish.java  README.md  REAL_PROXY_SOURCES.md  ROADMAP.md  SpectreOrchestrator.java  VERIFICATION_REPORT.md  architecture.md  benchmark.sh  build.sh  config.ini  coverage.out  examples.py  go.mod  go.sum  go_scraper.go  integration_obfuscation_test.go  layered_encryption_test.go  multi_counter_test.go  nexus_test.go  obfs4_test.go  obfuscation.yaml  obfuscation_test.go  orchestrator.go  orchestrator_test.go  pom.xml  premium_proxies.json  proxies_combined.json  (+16 more)
conductor/: product-guidelines.md  product.md  tech-stack.md  tmp_summaries.md  tracks.md
conductor/tracks/advanced_filtration_20260226/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/docs_update_20260305/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/ghost_obfuscation_20260228/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/ghost_signatures_20260228/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/network_isolation_20260226/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/nexus_wireguard_20260228/: index.md  metadata.json  plan.md  spec.md
internal/pool/: pool.go  pool_test.go
security-audit/: go.mod  main.go
src/: crypto.rs  lib.rs  main.rs  polish.rs  rotator.rs  tunnel.rs  types.rs  verifier.rs
