[package]
name = "spectre_network"
version = "0.1.0"
edition = "2021"

[lib]
name = "rotator_rs"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "spectre"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
lazy_static = "1.4"
pyo3 = { version = "0.23" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
hex = "0.4"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
chrono = "0.4"
aes-gcm = "0.10"
